# gafferExtensionDemo

./: CMakeLists.txt  CMakeLists_old.txt  gafferext-build.cmd
include/DemoGafferExtension/: DemoSceneProcessor.h  TypeIds.h
src/DemoGafferExtension/: DemoSceneProcessor.cpp
src/DemoGafferExtensionModule/: DemoGafferExtensionModule.cpp
startup/gui/: menu.py
utils/: build.bat  generate.bat
